# bananabot

./: .gitignore  README.md  pyproject.toml
src/bananabot/: __init__.py  cli.py  core.py
src/bananabot/bus/: __init__.py  core.py
src/bananabot/channels/: __init__.py  telegram.py
src/bananabot/providers/: __init__.py  anthropic.py
src/bananabot/session/: __init__.py  core.py
src/bananabot/skills/: __init__.py  example_skill.py
tests/: test_cli.py  test_core.py
