[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bananabot"
version = "0.1.0"
description = "Agent Loop framework with Skills support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Care", email = "care@example.com"},
]
keywords = ["agent", "ai", "llm", "skills", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0",
    "loguru>=0.7",
    "tenacity>=8.0",
    "httpx>=0.27",
    "litellm>=1.40",
    "aiofiles>=24.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]

[project.scripts]
bananabot = "bananabot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bananabot"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]